--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "start:dev": "nodemon ./index.js",
+    "start": "node ./index.js"
+  },
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
@@ -6,5 +10,8 @@
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.31.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
