--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mime-types": "^2.1.35",
+    "mongodb": "^4.11.0",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.31.1"
   },
